# libespm

./: .gitignore  .travis.yml  ==README==  CMakeLists.txt  Makefile  README  README.md  TODO  test.cpp
include/libespm/: FormId.h  GameId.h  Group.h  Plugin.h  Record.h  Subrecord.h
include/libespm/fo3/: tes4.h
include/libespm/fonv/: file.h
include/libespm/generic/: record.h
include/libespm/tes3/: file.h  tes3.h
include/libespm/tes4/: file.h
include/libespm/tes5/: file.h
include/libespm2/: Field.h  FormId.h  GameId.h  Group.h  Plugin.h  Record.h  SkyrimPlugin.h  SkyrimRecord.h  Subrecord.h
opts/: input  libespm.yaml  settings
src/: commonSupport.cpp  commonSupport.h  constants.h  fields.h  fileFormat.cpp  fileFormat.h  fileUtil.cpp  fileUtil.h  files.h  groups.h  libespm.h  parser.cpp  parser.h  parserClasses.cpp  parserClasses.h  playground.h  records.h  settings.h  skyrimParserRedoRel.cpp  streams.h  test.cpp  viewer.cpp  viewer.h
src/fo3/: file.h  tes4.h
src/fonv/: file.h  tes4.h
src/generic/: field.h  file.h  group.h  record.h  settings.h  streams.h
src/old/: fileUtil.cpp
src/tes3/: file.h  tes3.h
src/tes4/: file.h  tes4.h
src/tes5/: file.h  tes4.h
src/tests/: FormIdTest.h  PluginTest.h  SkyrimPluginTest.h  main.cpp
